Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!


* Verilog::Language 3.461 devel

***	Fix nettype declarations, msg2931.  [Andreas Sunardi]

* Verilog::Language 3.460 2019-01-26

***	Fix Verilog::Std being empty on fork, bug1394. [Corey Teffetalor]


* Verilog::Language 3.458 2019-01-24

***     Add Verilog::Cell::range accessor, bug1393. [Ed Carstens]

****    For write_verilog, print any cell parameters.


* Verilog::Language 3.456 2018-10-28

****    Fix number parsing with newline after radix, bug1340. [George Cuan]


* Verilog::Language 3.454 2018-08-21

****    Support parsing around Cadence protected meta-comments.

****    Fix define argument stringification (`"), broke since 3.446. [Joe DErrico]

****    Fix to ignore Unicode UTF-8 BOM sequences, msg2576. [HyungKi Jeong]


* Verilog::Language 3.452 2018-04-12

****	Fix parsing "output signed" in V2K port list, msg2540. [James Jung]

****	Fix GLIBC assertion failure, bug1299. [Filipe Rosset]


* Verilog::Language 3.450 2018-03-12

**      Support SystemVerilog 1800-2017.

**      Moving forward, use the git "stable" branch to track the latest release,
        and git "v#.###" tags for specific releases.


* Verilog::Language 3.448 2018-01-02

****    Workaround comment bug in flex 2.6.4, bug1252. [Rob Stoddard]


* Verilog::Language 3.446 2017-11-08

****	Fix `` expansion of `defines, bug1225, bug1227, bug1228. [Odd Magne Reitan]


* Verilog::Language 3.444 2017-09-21

****	Fix replication handling error, bug1205. [Leon Medpum]

****	Fix compile error on MAC OS X/clang 8.1.0, msg2337. [Kunal Bansal]


* Verilog::Language 3.442 2017-09-08

****	Fix new concatenation handling error, bug1200. [by Stefan Tauner]

****	Fix unreferenced scalar warning, bug1200. [by Stefan Tauner]


* Verilog::Language 3.440 2017-08-31
